# s4d

./: .gitignore  README.md  pyproject.toml
fivetables/: ft.sqlite3  main.py
shop/: db.sqlite3
shop/authenticate/: forms.py  urls.py  views.py
shop/authenticate/templates/: login.html  register.html
shop/forms/: admin.py  forms.py  models.py  urls.py  views.py
shop/forms/migrations/: 0001_initial.py
shop/forms/static/css/: index.css
shop/forms/templates/: form.html
shop/market/: admin.py  forms.py  models.py  urls.py  views.py
shop/market/enums/: cart_status.py
shop/market/migrations/: 0001_initial.py  0002_cart.py  0003_stuff.py  0004_remove_cart_cart_items_remove_cart_created_at_and_more.py  0005_stuff_is_available.py
shop/market/static/css/: about.css  index.css  styles_about.css
shop/market/templates/: 400.html  aboutUs.html  index.html  products.html  register.html
shop/market/templatetags/: my_filters.py
shop/models_and_migrations/: apps.py  models.py
shop/models_and_migrations/migrations/: 0001_initial.py
shop/shop/: settings.py  urls.py
shop/templates/: base.html  error.html
